feat: create header with menus

--- a/src/index.scss
+++ b/src/index.scss
@@ -63,3 +63,22 @@ a {
   background: rgba(255, 255, 255, 0.768);
   z-index: 99;
 }
+
+/*----Hovers----*/
+.hover:hover {
+  background: var(--bg-secondary);
+}
+.deep_hover:hover {
+  background: var(--bg-third);
+}
+/*----Hovers----*/
+
+/*----Scrollbar----*/
+.scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+.scrollbar::-webkit-scrollbar-thumb {
+  background: #aeaeafa1;
+  border-radius: 5px;
+}
+/*----Scrollbar----*/
