--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -163,3 +163,13 @@
     color: #fff;
   }
 }
+
+.Circle {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
