--- a/src/components/Login/components/LoginForm/LoginForm.scss
+++ b/src/components/Login/components/LoginForm/LoginForm.scss
@@ -32,9 +32,7 @@
   }
 
   &__form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @include flex-center-column;
     gap: 1rem;
     background: var(--bg-primary);
     box-shadow: 0 1px 2px var(--shadow-1);
