--- a/src/index.scss
+++ b/src/index.scss
@@ -13,28 +13,6 @@ a {
   text-decoration: none;
   color: inherit;
 }
-:root {
-  --bg-primary: #fff;
-  --bg-secondary: #f0f2f5;
-  --bg-third: #e4e6eb;
-  --bg-forth: #f0f2f5;
-  --color-primary: #050505;
-  --color-secondary: #65676b;
-  --divider: #ced0d4;
-  --dark-bg-primary: #18191a;
-  --dark-bg-secondary: #242526;
-  --dark-bg-third: #3a3b3c;
-  --dark-color-primary: #242526;
-  --dark-color-secondary: #b0b3b8;
-  --blue-color: #1876f2;
-  --green-color: #42b72a;
-  --light-blue-color: #e7f3ff;
-  --border-color: #ccced2;
-  --shadow-1: rgba(0, 0, 0, 0.2);
-  --shadow-2: rgba(0, 0, 0, 0.1);
-  --shadow-3: rgba(0, 0, 0, 0.3);
-  --shadow-inset: rgba(255, 255, 255, 0.5);
-}
 
 /*----Buttons----*/
 .blue_btn {
@@ -85,3 +63,73 @@ a {
   border-radius: 5px;
 }
 /*----Scrollbar----*/
+
+/*----General----*/
+.Absolute {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 360px;
+  height: fit-content;
+  border-radius: 10px;
+  background: $bg-primary;
+  box-shadow: 2px 2px 2px $shadow-1;
+  user-select: none;
+  padding: 10px;
+
+  .MenuItem {
+    margin-top: 0;
+  }
+
+  &__header {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-weight: 700;
+    font-size: 24px;
+  }
+}
+
+.Circle {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.SmallCircle {
+  position: relative;
+  height: 36px;
+  width: 36px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 11px;
+  background: $bg-third;
+  cursor: pointer;
+}
+
+.Splitter {
+  width: 100%;
+  height: 1px;
+  background: $bg-third;
+  margin-top: 5px;
+}
+
+.MenuItem {
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin-top: 5px;
+  padding: 7px;
+  font-weight: 600;
+  font-size: 14px;
+  border-radius: 10px;
+}
+/*----General----*/
