--- a/src/components/Header/components/SearchMenu/SearchMenu.scss
+++ b/src/components/Header/components/SearchMenu/SearchMenu.scss
@@ -7,8 +7,8 @@
   align-items: flex-start;
   flex-direction: column;
   gap: 6px;
-  background: var(--bg-primary);
-  box-shadow: 0 12px 12px var(--shadow-1), inset 0 0 0 0 var(--shadow-inset);
+  background: $bg-primary;
+  box-shadow: 0 12px 12px $shadow-1, inset 0 0 0 0 $shadow-inset;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   transition: all 0.2s;
@@ -65,7 +65,7 @@
 
     a {
       cursor: pointer;
-      color: var(--blue-color);
+      color: $blue-color;
     }
   }
 
