--- a/src/components/Login/components/RegisterForm/RegisterForm.scss
+++ b/src/components/Login/components/RegisterForm/RegisterForm.scss
@@ -3,14 +3,14 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: var(--bg-primary);
-  box-shadow: 0 1px 2px var(--shadow-1);
+  background: $bg-primary;
+  box-shadow: 0 1px 2px $shadow-1;
   border-radius: 10px;
   padding: 15px;
   padding-bottom: 1rem;
   width: 350px;
   height: fit-content;
-  color: var(--color-primary);
+  color: $color-primary;
 
   &__header {
     position: relative;
@@ -18,7 +18,7 @@
     flex-direction: column;
     gap: 10px;
     padding-bottom: 10px;
-    border-bottom: 1px solid var(--bg-third);
+    border-bottom: 1px solid $bg-third;
 
     i {
       position: absolute;
@@ -33,7 +33,7 @@
 
     span:last-of-type {
       font-size: 15px;
-      color: var(--color-secondary);
+      color: $color-secondary;
     }
   }
 
@@ -60,7 +60,7 @@
     align-items: center;
     gap: 2px;
     font-size: 13px;
-    color: var(--color-secondary);
+    color: $color-secondary;
 
     i {
       margin-top: 3px;
@@ -85,15 +85,15 @@
   &__infos {
     font-size: 11px;
     margin-top: 10px;
-    color: var(--color-secondary);
+    color: $color-secondary;
 
     span {
-      color: var(--blue-color);
+      color: $blue-color;
     }
   }
 
   &__signup {
-    background: var(--green-color);
+    background: $green-color;
     width: 70% !important;
     font-weight: 600 !important;
     font-size: 17px !important;
@@ -101,7 +101,7 @@
   }
 
   &__success {
-    color: var(--green-color);
+    color: $green-color;
   }
 
   &__error {
