--- a/src/index.scss
+++ b/src/index.scss
@@ -18,7 +18,7 @@ a {
 .blue_btn {
   border: none;
   outline: none;
-  background: var(--blue-color);
+  background: $blue-color;
   padding: 8.5px 12px;
   border-radius: 7px;
   font-family: inherit;
