--- a/src/components/Header/components/AllMenu/components/LeftSection/LeftSection.scss
+++ b/src/components/Header/components/AllMenu/components/LeftSection/LeftSection.scss
@@ -1,11 +1,11 @@
 .LeftSection {
-  background: var(--bg-primary);
+  background: $bg-primary;
   border-radius: 10px;
   padding: 15px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 
   &__search {
-    background: var(--bg-secondary);
+    background: $bg-secondary;
     display: flex;
     align-items: center;
     gap: 5px;
