--- a/src/components/Login/components/DateOfBirthSelect/DateOfBirthSelect.scss
+++ b/src/components/Login/components/DateOfBirthSelect/DateOfBirthSelect.scss
@@ -11,8 +11,8 @@
   &__select {
     width: 90px;
     font-size: 16px;
-    color: var(--color-primary);
-    background: var(--bg-primary);
+    color: $color-primary;
+    background:$bg-primary;
     border-radius: 5px;
     cursor: pointer;
 
@@ -31,10 +31,10 @@
     align-items: center;
     justify-content: space-between;
     font-size: 16px;
-    color: var(--color-primary);
+    color: $color-primary;
     border-radius: 5px;
     cursor: pointer;
-    border: 1px solid var(--color-secondary);
+    border: 1px solid $color-secondary;
     padding: 0 10px;
 
     @media (min-width: 539px) {
