--- a/src/components/Login/components/GenderSelect/GenderSelect.scss
+++ b/src/components/Login/components/GenderSelect/GenderSelect.scss
@@ -14,10 +14,10 @@
     align-items: center;
     justify-content: space-between;
     font-size: 16px;
-    color: var(--color-primary);
+    color: $color-primary;
     border-radius: 5px;
     cursor: pointer;
-    border: 1px solid var(--color-secondary);
+    border: 1px solid $color-secondary;
     padding: 0 10px;
 
     &--error {
