--- a/src/components/Login/components/LoginFooter/LoginFooter.scss
+++ b/src/components/Login/components/LoginFooter/LoginFooter.scss
@@ -1,6 +1,6 @@
 .LoginFooter {
   height: 22vh;
-  background: var(--bg-primary);
+  background: $bg-primary;
   padding: 1.5rem;
 
   &__wrap {
@@ -8,7 +8,7 @@
     flex-wrap: wrap;
     gap: 3px 10px;
     font-size: 13px;
-    color: var(--color-secondary);
+    color: $color-secondary;
     max-width: 350px;
     margin: 0 auto;
 
@@ -35,13 +35,13 @@
   }
 
   &__square {
-    background: var(--bg-secondary);
+    background: $bg-secondary;
     height: 19px;
     width: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid var(--bg-third);
+    border: 1px solid $bg-third;
 
     i {
       transform: scale(0.8);
@@ -52,7 +52,7 @@
   &__splitter {
     width: 100%;
     height: 1px;
-    background: var(--bg-third);
+    background: $bg-third;
     margin: 10px auto;
     max-width: 900px;
   }
