--- a/src/components/Login/components/LoginForm/LoginForm.scss
+++ b/src/components/Login/components/LoginForm/LoginForm.scss
@@ -1,6 +1,6 @@
 .LoginForm {
   height: 78vh;
-  color: var(--color-primary);
+  color: $color-primary;
 
   &__header {
     width: 300px;
@@ -34,8 +34,8 @@
   &__form {
     @include flex-center-column;
     gap: 1rem;
-    background: var(--bg-primary);
-    box-shadow: 0 1px 2px var(--shadow-1);
+    background: $bg-primary;
+    box-shadow: 0 1px 2px $shadow-1;
     padding: 1rem;
     padding-bottom: 2rem;
     width: 350px;
@@ -57,7 +57,7 @@
   }
 
   &__forgot-password {
-    color: var(--blue-color);
+    color: $blue-color;
     font-size: 14px;
     cursor: pointer;
 
@@ -73,11 +73,11 @@
   &__splitter {
     width: 100%;
     height: 1px;
-    background: var(--bg-third);
+    background: $bg-third;
   }
 
   &__open-signup {
-    background: var(--green-color);
+    background: $green-color;
     width: 70% !important;
     font-weight: 600 !important;
     font-size: 17px !important;
