--- a/src/components/Login/components/LoginInput/LoginInput.scss
+++ b/src/components/Login/components/LoginInput/LoginInput.scss
@@ -7,18 +7,18 @@
 
   &__input {
     outline: none;
-    border: 1px solid var(--bg-third);
-    background: var(--bg-primary);
+    border: 1px solid $bg-third;
+    background: $bg-primary;
     width: 100%;
     height: 50px;
     font-size: 17px;
     border-radius: 10px;
     padding-left: 10px;
     margin-bottom: 10px;
-    color: var(--color-primary);
+    color: $color-primary;
 
     &:focus {
-      border-color: var(--blue-color);
+      border-color: $blue-color;
     }
 
     &--error {
